--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,11 +40,13 @@
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "face-api.js": "^0.20.0",
     "framer-motion": "^12.29.0",
     "input-otp": "^1.4.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.2",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
@@ -56,6 +58,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
@@ -80,7 +83,11 @@
     "node": "24.0.0"
   },
   "devDependencies": {
+    "@babel/generator": "^7.28.6",
+    "@babel/parser": "^7.28.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/traverse": "^7.28.6",
+    "@babel/types": "^7.28.6",
     "@craco/craco": "^5.9.0",
     "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
@@ -89,6 +96,7 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
+    "express": "^5.2.1",
     "globals": "15.15.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
